data/src/snapshots/data__dataset__tests__mimo_dataset.snap
---
source: data/src/dataset.rs
expression: lala
---
[
    Batch {
        number_of_samples: 3,
        input_nodes: 2,
        output_nodes: 3,
        split_index: 6,
        data: [
            0.0,
            0.0,
            1.0,
            2.0,
            2.0,
            4.0,
            0.0,
            0.0,
            0.0,
            10.0,
            20.0,
            30.0,
            20.0,
            40.0,
            60.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 2,
        output_nodes: 3,
        split_index: 6,
        data: [
            3.0,
            6.0,
            4.0,
            8.0,
            5.0,
            10.0,
            30.0,
            60.0,
            90.0,
            40.0,
            80.0,
            120.0,
            50.0,
            100.0,
            150.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 2,
        output_nodes: 3,
        split_index: 6,
        data: [
            6.0,
            12.0,
            7.0,
            14.0,
            8.0,
            16.0,
            60.0,
            120.0,
            180.0,
            70.0,
            140.0,
            210.0,
            80.0,
            160.0,
            240.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 1,
        input_nodes: 2,
        output_nodes: 3,
        split_index: 2,
        data: [
            9.0,
            18.0,
            90.0,
            180.0,
            270.0,
        ],
        training: true,
    },
]
