data/src/snapshots/data__dataset__tests__siso_dataset.snap
---
source: data/src/dataset.rs
expression: lala
---
[
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            1.0,
            2.0,
            3.0,
            10.0,
            20.0,
            30.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            4.0,
            5.0,
            6.0,
            40.0,
            50.0,
            60.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            7.0,
            8.0,
            9.0,
            70.0,
            80.0,
            90.0,
        ],
        training: true,
    },
    Batch {
        number_of_samples: 1,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 1,
        data: [
            10.0,
            100.0,
        ],
        training: true,
    },
]
